syntax = "proto3";

option go_package = "github.com/PatrickMatthiesen/ChittyChat/proto";

package proto;

// compile command:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative [path to file, ex. proto/template.proto]


// The template service definition.
// you can call it whatever you want
service ChittyChat
{
    // get a stream from the server -> client for messages
    rpc Join (JoinRequest) returns (stream Message);

    // publish a message in the chat
    rpc Publish (Message) returns (PublishResponse);
}

message JoinRequest {
    string name = 1;
    int64 lamportTime = 2;
}

message Message {
    string sender = 1;
    string message = 2;
    int64 lamportTime = 3;
}

message PublishResponse {}